--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -9,7 +9,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="C:/Users/Joshua/Downloads/Possible Gift/Remain-In-Memory.exe"
+export_path="./Remain-In-Memory.exe"
 patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
@@ -33,8 +33,8 @@ codesign/timestamp_server_url=""
 codesign/digest_algorithm=1
 codesign/description=""
 codesign/custom_options=PackedStringArray()
-application/modify_resources=true
-application/icon=""
+application/modify_resources=false
+application/icon="uid://crqjfspp25kjv"
 application/console_wrapper_icon=""
 application/icon_interpolation=4
 application/file_version=""
