--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -7,9 +7,9 @@ advanced_options=false
 dedicated_server=false
 custom_features=""
 export_filter="all_resources"
-include_filter=""
+include_filter="*.xml"
 exclude_filter=""
-export_path="./Remain-In-Memory.exe"
+export_path="../rim.exe"
 patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
