--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -7,9 +7,9 @@ advanced_options=false
 dedicated_server=false
 custom_features=""
 export_filter="all_resources"
-include_filter=""
+include_filter="silly/dialogue_scenes.txt, assets/audio/speaker_voices/*, assets/visual/speaker_headshots/*"
 exclude_filter=""
-export_path="./Remain-In-Memory.exe"
+export_path="../../MTU/Husky Game Development Enterprise/Remain In Memory/Releases/Remain-In-Memory.exe"
 patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
@@ -22,11 +22,11 @@ script_export_mode=2
 
 custom_template/debug=""
 custom_template/release=""
-debug/export_console_wrapper=0
+debug/export_console_wrapper=1
 binary_format/embed_pck=true
 texture_format/s3tc_bptc=true
 texture_format/etc2_astc=false
-shader_baker/enabled=false
+shader_baker/enabled=true
 binary_format/architecture="x86_64"
 codesign/enable=false
 codesign/timestamp=true
@@ -36,7 +36,7 @@ codesign/description=""
 codesign/custom_options=PackedStringArray()
 application/modify_resources=false
 application/icon="uid://crqjfspp25kjv"
-application/console_wrapper_icon=""
+application/console_wrapper_icon="uid://br0g7t0hh5f3q"
 application/icon_interpolation=4
 application/file_version=""
 application/product_version=""
