--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -6,7 +6,7 @@ runnable=true
 dedicated_server=false
 custom_features=""
 export_filter="all_resources"
-include_filter="silly/dialogue_scenes.txt, assets/audio/speaker_voices/*, assets/visual/speaker_headshots/*"
+include_filter="assets/audio/speaker_voices/*, assets/visual/speaker_headshots/*"
 exclude_filter=""
 export_path="../../MTU/Husky Game Development Enterprise/Remain In Memory/Releases/rim.exe"
 patches=PackedStringArray()
